# DataScout

./: .gitignore  Dockerfile  README.md  __init__.py  config.ini  docker-compose.yml  frontend_backend_section.md  main.py  output.json  remove_package.py  requirements.txt  run_server.sh  run_telegram_bot.py  search_result_筆電_1.html  setup.py  storage.json  telegram_bot.env.example
web_service/: DEPLOYMENT_VERIFICATION_REPORT.md  README.md  deployment_enhanced_report_20250528_173047.md  deployment_report_20250527_105919.md  deployment_report_20250528_143452.md  deployment_report_20250528_144332.md  deployment_report_20250528_144648.md  deployment_report_20250528_145105.md  deployment_report_20250528_150116.md  deployment_report_20250528_150535.md  deployment_report_20250528_153302.md  deployment_report_20250528_202729.md  deployment_report_20250528_205526.md  deployment_test_report_20250528_150116.md  pyproject.toml  requirements-dev.txt  requirements.txt
web_service/app/: main.py
web_service/app/apis/: apexcharts_router.py  chart_router.py
web_service/app/core/: config.py  dependencies.py
web_service/app/models/: chart.py
web_service/scripts/: start_dev.sh
web_service/static/: area-fix.js  bar.html  bubble.html  candlestick.html  data-loader.js  heatmap.html  index.html  line.html  modern-index.html  polar-setup.js  polar.html  scatter.html  stacked_bar.html  unified-chart-handler.js
web_service/static/assets/: apexcharts_bubble_economy.json  (+7 more)
web_service/templates/: apexcharts_examples.html  chart_examples.html  dashboard.html  index.html  test_daisyui.html
(+1388 files in other folders)
